# python-dns-client

./: LICENSE  README.md  dns_client.py  pyproject.toml
dns_client/: __init__.py  __main__.py  client.py  errors.py  log.py  protocol.py  utils.py
dns_client/adapters/: requests.py
