# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://peps.python.org/pep-0621/#example
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-client"
authors = [{name = "Sergey M"}]
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
  "Topic :: Internet"
]

requires-python = ">=3.11.7"

dependencies = []

dynamic = ["version"]

# pip install -e '.[dev]'
# pip install -e '.[test]'
[project.optional-dependencies]
requests = [
  "requests",
  "cchardet",
]

test = [
  "pytest",
]

dev = [
  "black",
  "pylint",
]

[project.urls]
Repository = "https://github.com/s3rgeym/python-dns-client.git"

[tool.setuptools.dynamic]
version = {attr = "dns_client.__version__"}

[project.scripts]
